Remove unnecessarry wrapper module to allow unnamed module consumption